Deleting some typos

--- a/template.html
+++ b/template.html
@@ -31,12 +31,18 @@
 						<hr>
 						<!-- Contact Information -->
 						<address>
-						<strong>POSITION</strong><br>
-						<a href="mailto:example@example.com">example@example.com</a><br>
-						T: +34 --- --- ---
+							<strong>POSITION</strong>
+							<br>
+							<a href="mailto:example@example.com">example@example.com</a>
+							<br>
+							T: +34 --- --- ---
 						</address>
 						<!-- Social Media link -->
-						<p><a href="https://twitter.com/TUCUENTA" class="btn btn-info"><img src="Twitter_logo_white.png"class="pull-left" alt="Alberto Marin on Twitter" width="18" height="18"></img>@TU USUARIO</a>
+						<p>
+							<a href="https://twitter.com/twitter-account" class="btn btn-info">
+								<img src="Twitter_logo_white.png"class="pull-left" alt="twitter-account on Twitter" width="18" height="18">
+								@twitter-account
+							</a>
 						</p>
 					</div>
 				</div>
